<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">便捷简历</string>
    <string name="action_settings">设置</string>
    <string name="title">欢迎登陆便捷简历系统</string>
    <string name="titleRegister">欢迎注册便捷简历系统</string>
    <string name="ResumeDetails">简历内容</string>
    <string name="user_name">用户姓名</string>
    <string name="hint_name">请输入姓名</string>
    <string name="password">用户密码</string>
    <string name="hint_password">请输入用户密码</string>
    <string name="log_in_style">登陆方式</string>
    <string name="hiding">隐身</string>
    <string name="online">在线</string>
    <string name="keepPassword">记住密码</string>
    <string name="AutoLogIn">自动登陆</string>
    <string name="register">注册</string>
    <string name="log_in">登陆</string>
    <string name="countersignPassword">确认密码</string>
    <string name="cancel">取消</string>
    <string name="submit">提交</string>
    <string name="name">姓名</string>
    <string name="birthday">生日</string>
    <string name="Degree">学历</string>
    <string name="major">专业</string>
    <string name="school">学校</string>
    <string name="salary">薪资</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="famale">女</string>
    <string name="ProjectEexperience">项目经验</string>
    <string name="forgo">放弃</string>
    <string name="save">保存</string>
    <string name="title_activity_edit">Edit</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_detail">Detail</string>
    <string name="title_activity_registers">Registers</string>

</resources>
