<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/s6"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tvTitle"
        style="@style/Zull"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1sp"
        android:text="@string/title"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/tvname"
        style="@style/Zull"
        android:layout_below="@id/tvTitle"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="15dp"
        android:text="@string/user_name" />

    <EditText
        android:id="@+id/editName"
        style="@style/Zull"
        android:layout_width="match_parent"
        android:layout_alignBaseline="@id/tvname"
        android:layout_below="@id/tvTitle"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/tvname"
        android:hint="@string/hint_name"
        android:textColor="#FF9900"
        android:textColorHint="#CC3300" />

    <TextView
        android:id="@+id/tvpassword"
        style="@style/Zull"
        android:layout_below="@id/tvname"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="15dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/editpassword"
        style="@style/Zull"
        android:layout_width="match_parent"
        android:layout_alignBaseline="@id/tvpassword"
        android:layout_below="@id/tvname"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/tvpassword"
        android:hint="@string/hint_password"
        android:textColor="#FF9900"
        android:textColorHint="#CC3300" />

    <TextView
        android:id="@+id/tvLogStyle"
        style="@style/Zull"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/editpassword"
        android:text="@string/log_in_style" />

    <RadioGroup 
        android:id="@+id/rgLog"
        style="@style/Zull"
        android:layout_toRightOf="@id/tvLogStyle"
        android:layout_below="@id/editpassword"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >
        <RadioButton 
            style="@style/Zull"
            android:text="@string/hiding"
            />
        <RadioButton 
            style="@style/Zull"
            android:text="@string/online"
            />
    </RadioGroup>
    
    <CheckBox 
        android:id="@+id/cbKeep"
        style="@style/Zull"
        android:layout_below="@id/tvLogStyle"
        android:layout_marginTop="15dp"
        android:text="@string/keepPassword"
        />
    <CheckBox 
        android:id="@+id/cbAuto"
        style="@style/Zull"
        android:layout_below="@id/tvLogStyle"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@id/cbKeep"
        android:text="@string/AutoLogIn"
        />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cbKeep"
        android:orientation="horizontal"
        >
        <Button 
        android:id="@+id/btnRegister"
        style="@style/Zull"
        android:layout_width="150dp"
        android:layout_marginTop="15dp"
        android:text="@string/register"
        android:onClick="myclick"
        android:layout_weight="1"
        />
    <Button 
        android:id="@+id/btnLogIn"
        style="@style/Zull"
        android:layout_width="150dp"
        android:layout_weight="1"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@id/btnRegister"
        android:text="@string/log_in"
        android:onClick="myclick"
        />
    </LinearLayout>
    

</RelativeLayout>